force-app/main/default/objects/Lead/fields/Agreed_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Visit_Date__c</fullName>
    <description>Lumon website Gravity form integration: customer can propose the visit date</description>
    <inlineHelpText>Visit Date proposed by the customer via web form</inlineHelpText>
    <label>Agreed Visit Date</label>
    <type>Date</type>
</CustomField>