force-app/main/default/objects/Lead/fields/Campaign_Event__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Event__c</fullName>
    <description>Lumon campaign / event (used in web2lead form when needed as hidden information)</description>
    <label>Campaign / Event</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>