force-app/main/default/objects/Lead/fields/Customer_meeting_booked__c.field-meta.xml
<CustomField>
    <fullName>Customer_meeting_booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether customer meeting is booked with the lead and serves as a source for a validation rule</description>
    <label>Customer meeting booked</label>
    <type>Checkbox</type>
</CustomField>