force-app/main/default/objects/Lead/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>This selection segments the customer Lead</description>
    <inlineHelpText>Please choose the type of customer segment.</inlineHelpText>
    <label>Customer Segment OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Customer_Segments</valueSetName>
    </valueSet>
</CustomField>