force-app/main/default/objects/Lead/fields/Desired_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Desired_Contact_Time__c</fullName>
    <description>Lumon web2lead form (customer can propose a desired contact time)</description>
    <inlineHelpText>Please propose a date and time when you would prefer Lumon to contact you.</inlineHelpText>
    <label>Desired Contact Time</label>
    <type>DateTime</type>
</CustomField>