force-app/main/default/objects/Lead/fields/Email_Opt_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Date_Time__c</fullName>
    <label>Email Opt In Date/Time</label>
    <type>DateTime</type>
</CustomField>