force-app/main/default/objects/Lead/fields/Finland_Sync_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Finland_Sync_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to be used by marketing cloud to define MC region/country</description>
    <inlineHelpText>To define MC region/country</inlineHelpText>
    <label>Finland Sync to MC</label>
    <type>Checkbox</type>
</CustomField>