force-app/main/default/objects/Lead/fields/Marketing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Preference</label>
    <type>Checkbox</type>
</CustomField>