force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>This Field allows selection of one or more products of interest to the lead.
This custom field is part of the B2C lead to order process</description>
    <inlineHelpText>Please select one or more Products of Interest.</inlineHelpText>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roofs</fullName>
            </value>
            <value>
                <fullName>Glazing</fullName>
            </value>
            <value>
                <fullName>Railings</fullName>
            </value>
            <value>
                <fullName>Blinds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>