force-app/main/default/objects/Lead/fields/Product_Interest_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest_Details__c</fullName>
    <description>This Field allows additional text on product details of interest to the lead.
This custom field is part of the B2C lead to order process.</description>
    <inlineHelpText>Please fill in more Product Interest Details.</inlineHelpText>
    <label>Product Interest Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>