force-app/main/default/objects/Lead/fields/PropertyType__c.field-meta.xml
<CustomField>
    <fullName>PropertyType__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_Property_Types</valueSetName>
    </valueSet>
</CustomField>