force-app/main/default/objects/Lead/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <description>Lumon web2lead form (customer can fill in if they already have been in contact with Lumon sales representative)</description>
    <inlineHelpText>If you have already been talking with one of our sales representatives, please fill in their name here.</inlineHelpText>
    <label>Sales Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>