force-app/main/default/objects/Lead/fields/SMS_Opt_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In_Date_Time__c</fullName>
    <label>SMS Opt In Date/Time</label>
    <type>DateTime</type>
</CustomField>