force-app/main/default/objects/Lead/fields/Spain_Sync_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Spain_Sync_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to be used by marketing cloud to define MC region/country.</description>
    <inlineHelpText>To define MC region/country.</inlineHelpText>
    <label>Spain Sync to MC</label>
    <type>Checkbox</type>
</CustomField>