force-app/main/default/objects/Lead/fields/Sync_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_MC__c</fullName>
    <description>If email opt in or sms opt or marketing preference is true, the field is marked true</description>
    <formula>OR( (Email_Opt_In__c = true ), (SMS_Opt_In__c = true) , (Marketing_Preference__c = true) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync to MC</label>
    <type>Checkbox</type>
</CustomField>