force-app/main/default/objects/Lead/fields/Sync_to_MC_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_MC_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to MC</label>
    <type>Checkbox</type>
</CustomField>