force-app/main/default/objects/Lead/fields/Visit_Booked__c.field-meta.xml
<CustomField>
    <fullName>Visit_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lumon web2lead form optional field for fairs &amp; events</description>
    <label>Visit Booked</label>
    <type>Checkbox</type>
</CustomField>