force-app/main/default/objects/Lead/recordTypes/B2B_Lead.recordType-meta.xml
<RecordType>
    <fullName>B2B_Lead</fullName>
    <active>false</active>
    <businessProcess>B2B Lead Process</businessProcess>
    <description>Record type for B2B Leads</description>
    <label>B2B Lead</label>
</RecordType>