force-app/main/default/objects/Lead/recordTypes/B2B_Reseller.recordType-meta.xml
<RecordType>
    <fullName>B2B_Reseller</fullName>
    <active>true</active>
    <businessProcess>B2B Lead Process</businessProcess>
    <label>B2B Reseller</label>
</RecordType>