force-app/main/default/objects/Lead/recordTypes/B2C_Lead.recordType-meta.xml
<RecordType>
    <fullName>B2C_Lead</fullName>
    <active>true</active>
    <businessProcess>B2C Lead Process</businessProcess>
    <description>Record type for B2C Leads</description>
    <label>B2C Lead</label>
</RecordType>