force-app/main/default/objects/Lead/validationRules/Address_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Country_Mandatory</fullName>
    <active>true</active>
    <description>This validation ensures address information is captured before a specific lead status can be saved.</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
( 
ISPICKVAL( Status ,&apos;MQL&apos;) ||
ISPICKVAL( Status ,&apos;Sales Lead&apos;) ||
ISPICKVAL( Status ,&apos;SQL&apos;)
)
&amp;&amp;
ISBLANK( Country)</errorConditionFormula>
    <errorMessage>A Country is mandatory for Lead with this status</errorMessage>
</ValidationRule>