force-app/main/default/objects/Lead/validationRules/Customer_Segment_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Segment_Mandatory</fullName>
    <active>true</active>
    <description>This validation ensures customer segment information is captured before a specific lead status can be saved.</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
OR(
ISPICKVAL( Status ,&apos;MQL&apos;),
ISPICKVAL( Status ,&apos;Sales Lead&apos;),
ISPICKVAL( Status ,&apos;SQL&apos;)
)
&amp;&amp;
 ISBLANK( TEXT(Business_Type__c)) 
||
 ISBLANK( TEXT(Property_Type__c))</errorConditionFormula>
    <errorMessage>Please select a Business &amp; Property Type before saving.</errorMessage>
</ValidationRule>