force-app/main/default/objects/Lead/validationRules/First_Name_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Mandatory</fullName>
    <active>true</active>
    <description>Rule to Validate that for Leads, the first name is added</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
ISBLANK( FirstName )</errorConditionFormula>
    <errorMessage>Please fill in Firstname</errorMessage>
</ValidationRule>