force-app/main/default/objects/Lead/validationRules/Mobile_mandatory_for_lead_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_mandatory_for_lead_status</fullName>
    <active>true</active>
    <description>This validation ensures mobile phone information is captured before sales lead status can be saved.</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
(ISPICKVAL( Status ,&apos;Sales Lead&apos;) || ISPICKVAL(Status, &apos;SQL&apos;))
&amp;&amp; ISBLANK(  MobilePhone )</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>A Lead with this status cannot be saved or created without a Mobile Phone.</errorMessage>
</ValidationRule>