force-app/main/default/objects/Lead/validationRules/Names_start_with_capital_letter_for_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Names_start_with_capital_letter_for_Lead</fullName>
    <active>false</active>
    <description>This validation allows users to only add names that start with a capital letter.</description>
    <errorConditionFormula>OR(
(LEFT( UPPER(FirstName) , 1) &lt;&gt;  LEFT( FirstName, 1) ),
(LEFT( UPPER(LastName) , 1) &lt;&gt;  LEFT(  LastName  , 1) )
)</errorConditionFormula>
    <errorMessage>Please make sure the customer name details starts with a Capital letter.</errorMessage>
</ValidationRule>