force-app/main/default/objects/Lead/validationRules/PostalCode_mandatory_for_MQL.validationRule-meta.xml
<ValidationRule>
    <fullName>PostalCode_mandatory_for_MQL</fullName>
    <active>true</active>
    <description>This validation ensures address information is captured before a specific lead status can be saved.</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
(ISPICKVAL( Status ,&apos;MQL&apos;) || ISPICKVAL( Status ,&apos;Sales Lead&apos;))
&amp;&amp;
(OR(
ISBLANK( PostalCode),
ISBLANK( Country )
))</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>A MQL or Sales Lead needs at minimum a Postal Code and Country</errorMessage>
</ValidationRule>