force-app/main/default/objects/Lead/validationRules/Property_Type_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Type_Mandatory</fullName>
    <active>true</active>
    <description>This validation ensures customer segment information is captured before a specific lead status can be saved.</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
OR(
ISPICKVAL( Status ,&apos;MQL&apos;),
ISPICKVAL( Status ,&apos;Sales Lead&apos;),
ISPICKVAL( Status ,&apos;SQL&apos;)
)
&amp;&amp;
 ISBLANK( TEXT(Property_Type__c))</errorConditionFormula>
    <errorMessage>Please select a Property Type before saving.</errorMessage>
</ValidationRule>