force-app/main/default/objects/Lead/listViews/My_Hot_Leads.listView-meta.xml
<ListView>
    <fullName>My_Hot_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <label>My Hot Leads</label>
</ListView>